fix: Fix Home page styling on mobile layout

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -586,6 +586,18 @@ video {
   position: sticky;
 }
 
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-20 {
+  bottom: -5rem;
+}
+
+.-bottom-64 {
+  bottom: -16rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -873,6 +885,12 @@ video {
   text-align: left;
 }
 
+@media not all and (min-width: 640px) {
+  .home-biography {
+    display: none;
+  }
+}
+
 .profile-picture {
   max-height: 16rem;
 }
@@ -887,6 +905,7 @@ video {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
   gap: 1rem;
+  overflow-y: scroll;
   padding: 1rem;
 }
 
@@ -926,9 +945,7 @@ video {
 
 .footer {
   background-color: var(--background-colour);
-  margin-top: -10vh;
-  position: absolute;
-  bottom: 0px;
+  place-self: end;
   display: flex;
   width: 100vw;
   justify-content: center;
