--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -41,7 +41,7 @@
 }
 
 .home-biography {
-    @apply flex place-items-center justify-around text-left;
+    @apply max-sm:hidden flex place-items-center justify-around text-left;
 }
 
 .profile-picture {
@@ -49,7 +49,7 @@
 }
 
 .dashboard {
-    @apply grid grid-cols-1 md:grid-cols-2 gap-4 p-4;
+    @apply grid grid-cols-1 md:grid-cols-2 gap-4 p-4 overflow-y-scroll;
 }
 
 .dashboard-item {
@@ -78,6 +78,6 @@
 
 .footer {
     background-color: var(--background-colour);
-    margin-top: -10vh;
-    @apply flex justify-center text-center p-4 bottom-0 w-screen absolute;
+    place-self: end;
+    @apply flex justify-center text-center p-4 w-screen;
 }
